--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
+    "chokidar": "^2.0.3",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -49,13 +50,13 @@
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.2",
     "mocha": "^2.5.3",
-    "nodemon": "^1.9.2",
+    "mysql": "^2.5.5",
+    "nodemon": "^1.17.4",
     "sat": "^0.6.0",
     "simple-quadtree": "^0.1.3",
-    "socket.io": "^1.7.4",
-    "socket.io-client": "^1.7.4",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
     "webpack": "^1.4.0",
-    "webpack-stream": "^3.2.0",
-    "mysql": "^2.5.5"
+    "webpack-stream": "^3.2.0"
   }
 }
