--- a/package.json
+++ b/package.json
@@ -35,28 +35,35 @@
   ],
   "dependencies": {
     "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
     "chokidar": "^2.0.3",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-debug": "^4.0.0",
+    "gulp-javascript-obfuscator": "^1.1.4",
     "gulp-jshint": "^2.0.1",
     "gulp-mocha": "^2.2.0",
     "gulp-nodemon": "^2.0.7",
     "gulp-todo": "^4.1.0",
     "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
+    "javascript-obfuscator": "^0.16.0",
     "jshint": "^2.9.2",
     "mocha": "^2.5.3",
     "mysql": "^2.5.5",
     "nodemon": "^1.17.4",
+    "pump": "^3.0.0",
     "sat": "^0.6.0",
     "simple-quadtree": "^0.1.3",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
-    "webpack": "^1.4.0",
-    "webpack-stream": "^3.2.0"
+    "webpack": "^4.8.1",
+    "webpack-stream": "^4.0.3"
+  },
+  "devDependencies": {
+    "babel-plugin-syntax-trailing-function-commas": "^6.22.0"
   }
 }
