--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "webpack-stream": "^4.0.3"
   },
   "devDependencies": {
-    "babel-plugin-syntax-trailing-function-commas": "^6.22.0"
+    "babel-plugin-syntax-trailing-function-commas": "^6.22.0",
+    "gulp-env": "^0.4.0"
   }
 }
