--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chai": "^3.5.0",
     "chokidar": "^2.0.3",
     "express": "^4.13.4",
+    "express-basic-auth": "^1.1.5",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-debug": "^4.0.0",
