Bug fixes, features

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jshint": "^2.9.2",
     "mocha": "^2.5.3",
     "mysql": "^2.5.5",
+    "nodemailer": "^4.6.6",
     "nodemon": "^1.17.4",
     "pump": "^3.0.0",
     "sat": "^0.6.0",
