--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
     "chokidar": "^2.0.3",
+    "ejs": "^2.6.1",
     "express": "^4.13.4",
     "express-basic-auth": "^1.1.5",
     "gulp": "^3.9.1",
